--- a/HTML&CSS/Animation.css
+++ b/HTML&CSS/Animation.css
@@ -6,21 +6,19 @@
     border: 1px solid blue;
     background-color: black;
     animation-name: animation;
-    /* animation-iteration-count: infinite; */
-    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-duration: 4s;
 }
 
 @keyframes animation {
 
     0%{top:0; left:0}
 
-    50%{background-color: aqua; top:0; left:95%}
+    50%{background-color: red; top:40%; left:40%}
 
-    60%{background-color: azure; top:0; right:0}
+    80%{background-color: blue; top:70%; left:70%}
 
-    80%{background-color: brown; top:0; left:95%}
-
-    100%{top:0; left:0}
+    100%{background-color: blueviolet; bottom: 0; right:0}
 
 
 }
